--- a/index.html
+++ b/index.html
@@ -36,8 +36,20 @@
     </nav>
 
     <!-- Hero Section -->
-    
-    
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>NEXT GENERATION</h1>
+                <h2>TECHNOLOGY</h2>
+                <p>See what makes us different.</p>
+                <button class="main__btn"><a href="#">Get started.</a></button>
+            </div>
+            <div class="main__img--container">
+                <img src="./images/pic1.png" alt="potato" id="main__img" height=200 width=200>
+            </div>
+        </div>
+    </div>
+
 
     <script src="app.js" ></script>
 </body>
